--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ body {
   overflow: hidden;
 }
 
+/* Header CV */
+
 .cvHeader {
   background-color: var(--cv-one);
   display: grid;
@@ -26,6 +28,7 @@ body {
   color: white;
   padding: 20px;
   gap: 20px;
+  align-items: center;
 }
 
 .photo {
@@ -39,6 +42,37 @@ body {
   margin: 0px;
 }
 
+/* Education CV */
+
+.education {
+  color: black;
+  padding: 20px;
+}
+
+.educationItem {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+
+.educationItem > * {
+  margin: 5px;
+}
+
+.educationItemControls {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  padding-left: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.educationDelete {
+  padding: 0;
+  background: none;
+  border: none;
+  color: white;
+}
 /* Controls panel */
 
 .controls {
@@ -47,21 +81,28 @@ body {
   background-color: var(--color-one);
 }
 
-.controls h1 {
+.controls h1,
+.controls h2 {
   text-align: center;
 }
 
 .controls div {
   border-radius: 10px;
-  box-shadow: 0px 0px 10px black;
 }
 
-.personalInfoControls {
+.controlsSection {
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   background-color: var(--color-two);
+  box-shadow: 0px 0px 10px black;
+}
+
+.itemsControl {
+  border: none;
+  box-shadow: none;
+  margin: 0px;
 }
 
 label {
@@ -73,4 +114,8 @@ input {
   border-radius: 5px;
   border: none;
   min-height: 20px;
+}
+
+textarea {
+  resize: none;
 }
